# garage-data-pills

./: .gitignore  pyproject.toml  requirements.txt
data/: rfm_monthly.csv
notebooks/: accelerating_pandas_with_vectors.ipynb  churn_analysis.ipynb  churn_analysis_parte_I.ipynb  clustering_con_kmeans.ipynb  como_no_predecir_acciones.ipynb  domina_la_regresion.ipynb  regresion_avanzada.ipynb  regression_algorithms.ipynb  similaridad.ipynb
